lib/mhonarc.pl: Implement detection codes for MHonArc's index files such as maillist.hml or threads.html.

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.21 1999-09-01 08:26:22 satoru Exp $
+dnl $Id: configure.in,v 1.22 1999-09-02 00:05:38 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -12,9 +12,6 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/cgi.c)
 AM_INIT_AUTOMAKE(namazu, 1.90)
-
-dnl Do you wish?
-dnl PATH=/bin:/usr/bin:/usr/sbin:/usr/local/bin:$PATH
 
 dnl This option requires config.guess, config.sub and install-sh
 dnl AC_CANONICAL_SYSTEM
@@ -390,3 +387,9 @@ AM_CONFIG_HEADER(config.h)
 AC_OUTPUT([Makefile src/Makefile conf/Makefile lib/var.pl lib/conf.pl
 src/mknmz.pl src/gcnmz src/gtnmz src/mailutime namazu.spec tknamazu/Makefile tknamazu/tknamazu.tcl],
 [chmod +x src/gcnmz src/gtnmz src/mailutime]) 
+
+
+# Local Variables:
+# mode:shell-script
+# sh-indentation:2
+# End:
