--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -72,10 +72,10 @@ OBJEXT = @OBJEXT@
 OPT_ADMIN_EMAIL = @OPT_ADMIN_EMAIL@
 OPT_CGI_LOCATION = @OPT_CGI_LOCATION@
 OPT_LANGUAGE = @OPT_LANGUAGE@
+OPT_SCORING = @OPT_SCORING@
 OPT_WAKATI_DEFAULT = @OPT_WAKATI_DEFAULT@
 PACKAGE = @PACKAGE@
 PERL = @PERL@
-SCORING = @SCORING@
 TEST_MODE = @TEST_MODE@
 TKNAMAZU = @TKNAMAZU@
 TK_LANGUAGE = @TK_LANGUAGE@
