--- a/tknamazu/Makefile.in
+++ b/tknamazu/Makefile.in
@@ -85,7 +85,8 @@ WISH = @WISH@
 ZCAT = @ZCAT@
 
 AUTOMAKE_OPTIONS = no-dependencies
-tknamazudir = @pkgdatadir@/tknamazu
+
+tknamazudir = $(pkgdatadir)/tknamazu
 
 bin_SCRIPTS = tknamazu
 tknamazu_DATA = tknamazu.hlp tknamazu.ppm mini-tknamazu.xpm
