--- a/lib/var.pl.in
+++ b/lib/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.13 1999-09-01 07:17:41 satoru Exp $
+# $Id: var.pl.in,v 1.14 1999-09-05 02:41:41 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
@@ -46,7 +46,7 @@ $NMZ{ii}     = "$base.ii";
 $NMZ{r}      = "$base.r";
 $NMZ{head}   = "$base.head";
 $NMZ{foot}   = "$base.foot";
-$NMZ{log}    = "$base.log";
+$NMZ{'log'}    = "$base.log";
 $NMZ{slog}   = "$base.slog";
 $NMZ{lock}   = "$base.lock";
 $NMZ{lock2}  = "$base.lock2";
