--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -87,7 +87,7 @@ LIBS = -lm
 bin_PROGRAMS = namazu
 bin_SCRIPTS = gcnmz mailutime mknmz gtnmz
 
-CLEANFILES = mknmz.pl $(bin_SCRIPTS)
+CLEANFILES = mknmz.pl
 
 confdir = $(pkgdatadir)/conf
 libdir = $(pkgdatadir)/lib
@@ -265,7 +265,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$d/$$file $(distdir)/$$file; \
+	    cp -pr $$/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
