--- a/tknamazu/Makefile.am
+++ b/tknamazu/Makefile.am
@@ -7,7 +7,7 @@ tknamazudir = $(pkgdatadir)/tknamazu
 bin_SCRIPTS = tknamazu
 tknamazu_DATA = tknamazu.hlp tknamazu.ppm mini-tknamazu.xpm
 
-CLEANFILES = tknamazu.tcl $(bin_SCRIPTS)
+CLEANFILES = tknamazu.tcl
 
 EXTRA_DIST = README.tknamazu $(tknamazu_DATA)
 
