--- a/tknamazu/Makefile.in
+++ b/tknamazu/Makefile.in
@@ -89,7 +89,7 @@ tknamazudir = $(pkgdatadir)/tknamazu
 bin_SCRIPTS = tknamazu
 tknamazu_DATA = tknamazu.hlp tknamazu.ppm mini-tknamazu.xpm
 
-CLEANFILES = tknamazu.tcl $(bin_SCRIPTS)
+CLEANFILES = tknamazu.tcl
 
 EXTRA_DIST = README.tknamazu $(tknamazu_DATA)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -167,7 +167,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$d/$$file $(distdir)/$$file; \
+	    cp -pr $$/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
