--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.28 1999-09-06 13:19:10 rug Exp $
+dnl $Id: configure.in,v 1.29 1999-09-06 13:35:37 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -177,7 +177,7 @@ else
 		[AC_PATH_PROGS(WISH, wish8.2 wish8.1 wish8.0jp wish4.2jp wish, no)]
     )
     if test "$WISH" = "no"; then
-        AC_MSG_WARN(*** wish not found\, tknamazu will not be built ***)
+        AC_MSG_WARN(*** wish not found: tknamazu will not be built because ***)
         TKNAMAZU=""
     else
         AC_ARG_WITH(
@@ -188,7 +188,7 @@ else
 			[AC_PATH_PROG(LYNX, lynx, no)]
         )
         if test "$LYNX" = "no"; then
-            AC_MSG_WARN(*** lynx not found\, tknamazu will not be built ***)
+            AC_MSG_WARN(*** lynx not found: tknamazu will not be built ***)
             TKNAMAZU=""
         else
             TKNAMAZU="tknamazu"
@@ -206,7 +206,7 @@ AC_ARG_WITH(
 	[AC_PATH_PROGS(GROFF, jgroff groff nroff, no)]
 )
 if test "$GROFF" = "no"; then
-    AC_MSG_WARN(*** groff not found\, tknamazu cannot browse man pages ***)
+    AC_MSG_WARN(*** groff not found: tknamazu cannot browse man pages ***)
 fi
 AC_ARG_WITH(
 	info,
@@ -216,7 +216,7 @@ AC_ARG_WITH(
 	[AC_PATH_PROG(INFO, info, no)]
 )
 if test "$INFO" = "no"; then
-    AC_MSG_WARN(*** info not found\, tknamazu cannot browse info files ***)
+    AC_MSG_WARN(*** info not found: tknamazu cannot browse info files ***)
 fi
 AC_ARG_WITH(
 	zcat,
