--- a/Makefile.in
+++ b/Makefile.in
@@ -92,7 +92,7 @@ EXTRA_DIST = README-ja namazu.spec.in namazu.spec 	     ChangeLog.old.1.gz File-
 
 EXTRA_DIRS = doc etc lib lisp filter template
 
-CLEANFILES = File-MMagic/Makefile File-MMagic/pm_to_blib 	     conf/mknmz.conf-dist lib/var.pl lib/conf.pl
+CLEANFILES = File-MMagic/Makefile File-MMagic/pm_to_blib 	     conf/mknmz.conf-dist
 
 CLEANDIRS = File-MMagic/blib
 
