--- a/conf/Makefile.in
+++ b/conf/Makefile.in
@@ -77,7 +77,6 @@ PACKAGE = @PACKAGE@
 PERL = @PERL@
 TEST_MODE = @TEST_MODE@
 TKNAMAZU = @TKNAMAZU@
-TK_LANGUAGE = @TK_LANGUAGE@
 VERSION = @VERSION@
 WISH = @WISH@
 ZCAT = @ZCAT@
@@ -91,7 +90,7 @@ DIST_COMMON =  Makefile.am Makefile.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = tar
+TAR = gtar
 GZIP_ENV = --best
 all: all-redirect
 .SUFFIXES:
@@ -119,7 +118,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$d/$$file $(distdir)/$$file; \
+	    cp -pr $$/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
