--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.30 1999-09-07 08:50:05 satoru Exp $
+dnl $Id: configure.in,v 1.31 1999-09-07 11:04:58 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -74,18 +74,15 @@ if test "${japanese}" = "no"; then
     OPT_LANGUAGE=en
     TK_LANGUAGE=ENGLISH
     AC_SUBST(OPT_LANGUAGE)
-    AC_SUBST(TK_LANGUAGE)
     OPT_WAKATI_DEFAULT="none"
 else
     OPT_LANGUAGE=ja
-    TK_LANGUAGE=JAPANESE
     AC_ARG_WITH(
 	    lang,
 	    [  --with-lang=language    set default LANGUAGE code (ja or en) [ja]],
 	    OPT_LANGUAGE=$with_lang,
     )
     AC_SUBST(OPT_LANGUAGE)
-    AC_SUBST(TK_LANGUAGE)
 
     AC_ARG_WITH(
 	    nkf,
@@ -192,43 +189,41 @@ else
             TKNAMAZU=""
         else
             TKNAMAZU="tknamazu"
+            AC_ARG_WITH(
+				groff,
+				[  --with-groff=PATH       set groff location [search path]],
+				AC_MSG_RESULT(using $with_groff for groff)
+				GROFF = $with_groff,
+				[AC_PATH_PROGS(GROFF, jgroff groff nroff, no)]
+            )
+            if test "$GROFF" = "no"; then
+                AC_MSG_WARN(*** groff not found: tknamazu cannot browse man pages ***)
+            fi
+            AC_ARG_WITH(
+				info,
+				[  --with-info=PATH       set info location [search path]],
+				AC_MSG_RESULT(using $with_info for info)
+				INFO = $with_info,
+				[AC_PATH_PROG(INFO, info, no)]
+            )
+            if test "$INFO" = "no"; then
+                AC_MSG_WARN(*** info not found: tknamazu cannot browse info files ***)
+            fi
+            AC_ARG_WITH(
+				zcat,
+				[  --with-zcat=PATH       set zcat location [search path]],
+				AC_MSG_RESULT(using $with_zcat for zcat)
+				ZCAT = $with_zcat,
+				[AC_PATH_PROG(ZCAT, zcat, no)]
+            )
+            if test "$ZCAT" = "no"; then
+                AC_MSG_WARN(zcat not found)
+            fi
+            AC_CONFIG_SUBDIRS(tknamazu)
         fi
     fi
 fi
 AC_SUBST(TKNAMAZU)
-
-dnl additional helper programs
-AC_ARG_WITH(
-	groff,
-	[  --with-groff=PATH       set groff location [search path]],
-	AC_MSG_RESULT(using $with_groff for groff)
-	GROFF = $with_groff,
-	[AC_PATH_PROGS(GROFF, jgroff groff nroff, no)]
-)
-if test "$GROFF" = "no"; then
-    AC_MSG_WARN(*** groff not found: tknamazu cannot browse man pages ***)
-fi
-AC_ARG_WITH(
-	info,
-	[  --with-info=PATH       set info location [search path]],
-	AC_MSG_RESULT(using $with_info for info)
-	INFO = $with_info,
-	[AC_PATH_PROG(INFO, info, no)]
-)
-if test "$INFO" = "no"; then
-    AC_MSG_WARN(*** info not found: tknamazu cannot browse info files ***)
-fi
-AC_ARG_WITH(
-	zcat,
-	[  --with-zcat=PATH       set zcat location [search path]],
-	AC_MSG_RESULT(using $with_zcat for zcat)
-	ZCAT = $with_zcat,
-	[AC_PATH_PROG(ZCAT, zcat, no)]
-)
-if test "$ZCAT" = "no"; then
-    AC_MSG_WARN(zcat not found)
-fi
-
 
 
 dnl *
@@ -319,6 +314,8 @@ AC_MSG_RESULT($admin)
 OPT_ADMIN_EMAIL=$admin
 AC_SUBST(OPT_ADMIN_EMAIL)
 
+dnl OS/2 specific
+
 if test -n "$EMXOS2"; then
     CFLAGS="-O2 -m486 -Zmtd"
     LDFLAGS="-m486 -Zmtd -Zcrtdll -Zsysv-signals -Zbin-files"
@@ -371,7 +368,7 @@ dnl *
 AM_CONFIG_HEADER(config.h)
 
 AC_OUTPUT([Makefile src/Makefile conf/Makefile lib/var.pl lib/conf.pl
-src/mknmz.pl src/gcnmz src/gtnmz src/mailutime namazu.spec tknamazu/Makefile tknamazu/tknamazu.tcl],
+src/mknmz.pl src/gcnmz src/gtnmz src/mailutime namazu.spec],
 [chmod +x src/gcnmz src/gtnmz src/mailutime]) 
 
 # Local Variables:
