--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.34 1999-10-11 11:25:56 satoru Exp $
+dnl $Id: configure.in,v 1.35 1999-10-12 08:39:21 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -14,7 +14,7 @@ AC_INIT(src/cgi.c)
 AC_PREREQ(2.13)               dnl Minimum Autoconf version required.
 AM_INIT_AUTOMAKE(namazu, 1.9.6)
 
-dnl AM_ACLOCAL_INCLUDE(macros)
+AM_ACLOCAL_INCLUDE(macros)
 
 dnl Namazu's website
 OPT_NMZ_URI="http://openlab.ring.gr.jp/namazu/"
